--- a/style.css
+++ b/style.css
@@ -3,13 +3,14 @@ html, body { background:#39424e; height:100%; font:13px 'Open Sans', Arial, sans
 span { display: none; }
 a, a:active { text-decoration:none; color: #fff; }
 a:hover { text-decoration:underline; }
+.clear { clear: both; }
 
 /* Basic styles */
 h1, h2 { font-family: "Source Code Pro", Monaco, "monospace";  }
-h1 { font-size: 72px; font-weight: 300; word-spacing:-12px; line-height:88px; margin-left: -8px; margin-bottom: 50px;}
+h1 { font-size: 72px; font-weight: 300; word-spacing:-12px; line-height:88px; margin-left: -8px; }
 h2 { font-size: 36px; font-weight: 600; word-spacing: -8px; line-height:52px; margin-left: -3px; }
 h3 { font-size: 24px; font-weight: normal; line-height: 35px; margin-left: -1px;  color:#fff; padding-bottom: 20px; }
-h4 { color: white; font-size: 13px; font-weight: normal; text-transform: uppercase; line-height: 20px; letter-spacing: 5px; }
+h4 { font-size: 13px; font-weight: normal; text-transform: uppercase; line-height: 20px; letter-spacing: 5px; }
 p { font-size: 13px; line-height:25px;   }
 strong { font-weight:600; }
 em { opacity:0.7; }
@@ -27,11 +28,11 @@ em { opacity:0.7; }
 .chart {max-width: 280px};
 
 /* Fixed layer on top of everything */
-#fxd { width:100%; height:100%; position:fixed; left: 0; top: 0; }
+#fxd { width:100%; height:100%; position:fixed; left: 0; top: 0; z-index: 1; }
 
 #fxd .logo, #prologue .logo { 
-  position:absolute; display:block; width:79px; height:79px; top:6%; left:100%; margin-left:-140px; background-size:57px 57px; z-index: 1;}
-.logo h4, #prologue .logo h4 { position:relative; left:-132px; top:30px; z-index: 1;}
+  position:absolute; display:block; width:79px; height:79px; top:6%; left:100%; margin-left:-140px; background-size:57px 57px; }
+.logo h4, #prologue .logo h4 { position:relative; left:-132px; top:30px; }
 a.logo:hover { opacity:0.9; text-decoration:none;  }
 
 /* Share controls */
@@ -46,6 +47,10 @@ a.logo:hover { opacity:0.9; text-decoration:none;  }
 /* Home */
 #home { height: 100%; }
 #home h1 { position:absolute; left:160px; top:48%; width: 560px; color:#fff; z-index: 2; }
+#home ul { position:absolute; left:160px; top:80%; width: 560px; z-index: 2;  }
+#home ul li { display:block; float:left; color:#738f93; padding:0 30px 0 0; }
+#home ul li:nth-child(2) { padding-left:30px; border-left: 1px solid rgba(57,66,78,0.50); }
+#home ul li strong { display:block; color:#fff; }
 #home a.logo { display:block; width:190px; height:42px; position:absolute; left:160px; top:10%;
   background-size:100%; z-index:2; }
 
@@ -69,10 +74,11 @@ p.credit a { color: #fff; }
 
 /* Footer */
 #footer { height:200px; min-height:200px;  background-color:#0e141e; letter-spacing:0;  }
-#footer p, a { color:#738f93; }
+#footer a.logo { display:block; width:190px; height:42px; background-size:100%; }
+#footer p, #footer div.half:nth-child(1) a { color:#738f93; }
 
 /* backgrounds */
-#BodyBack { background:#0e141e url(images/Cover_Review.jpg) fixed no-repeat top right; background-size: 100%; }
+#BodyBack { background:#0e141e url(Images/Cover_Review.jpg) fixed no-repeat top right; background-size: 100%; }
 #contents { background:#2e353e fixed no-repeat top; background-size:contain; }
 #insight2 { background-color:#2e353e; }
 #insight3 { background-color:#0093e2; }
@@ -84,7 +90,7 @@ p.credit a { color: #fff; }
 /* Breakpoints */
 
 @media only screen and (max-width: 1000px) { 
-  #home h1,#home a { left:100px; }
+  #home h1, #home ul,#home a.logo { left:100px; }
   .sub.section { padding:0 100px 72px 100px; }
   .half, .full { width:auto; padding:10% 8% 0 0; }
   .half.second { width:auto; padding:0 8% 0 0; display: block; }
@@ -94,14 +100,20 @@ p.credit a { color: #fff; }
 @media only screen and (max-width: 765px) { 
   .sub.section { background-color:#39424e; padding:0 40px; }
   .credit { display:none; }
-    
+  .pagination { display:none; }
+  
   #home h1 { position:relative; left:0; padding: 0 80px 0 44px; top:44%; width:auto; font-weight:600; font-size:30px; word-spacing:-6px; line-height:40px; letter-spacing:-1px;  margin-left:-5px; }
   h3 { font-size:20px; }
+  #home ul { position:absolute; left:40px; top:78%; width:auto; }
+  #home ul li { float:none; padding:10px 0; border:0; }
+  #home a.logo { left:40px; top:8%; }
+  #home ul li:first-child { padding-left:0; border:none; }
+  #home h1 em { width:1px; }
   
   .half { width: auto; padding:18% 8% 0 0; }
   .sub.section { padding:0 40px 64px 40px; }
   .half p { max-width:auto; }
-  .half h2, #prologue h2 { padding:16% 0 8% 0; font-size:24px; word-spacing:-7px; line-height:36px; margin-left: -3px; letter-spacing:0;  }
+  .half h2, .full h2, #prologue h2 { padding:16% 0 8% 0; font-size:24px; word-spacing:-7px; line-height:36px; margin-left: -3px; letter-spacing:0;  }
   .half h3 { padding:16% 0 0 0; margin:-24px 0 32px 0;  }
  
   #prologue .logo, #fxd .logo { width:40px; height:40px; top:4%; left:100%; margin-left:-60px; background-size:100%;  }  
