--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Global styles */
 html, body { background:#39424e; height:100%; font:13px 'Open Sans', Arial, sans-serif; line-height:20px; color:#fff; font-weight:300; letter-spacing:0.4px; }
-span { display: none; }
+span {color: white; }
 a, a:active { text-decoration:none; color: #fff; }
 a:hover { text-decoration:underline; }
 .clear { clear: both; }
@@ -8,11 +8,11 @@ a:hover { text-decoration:underline; }
 /* Basic styles */
 h1, h2 { font-family: "Source Code Pro", Monaco, "monospace";  }
 h1 { font-size: 72px; font-weight: 300; word-spacing:-12px; line-height:88px; margin-left: -8px; }
-h2 { font-size: 36px; font-weight: 600; word-spacing: -8px; line-height:52px; margin-left: -3px; }
+h2 { font-size: 36px; font-weight: 600; word-spacing: -2px; line-height:52px; margin-left: -3px;}
 h3 { font-size: 24px; font-weight: normal; line-height: 35px; margin-left: -1px;  color:#fff; padding-bottom: 20px; }
-h4 { font-size: 13px; font-weight: normal; text-transform: uppercase; line-height: 20px; letter-spacing: 5px; }
-p { font-size: 13px; line-height:25px;   }
-strong { font-weight:600; }
+h4 { font-size: 13px; font-weight: normal; text-transform: uppercase; line-height: 20px; letter-spacing: 5px; z-index: 1; margin-top: 60px;}
+p { font-size: 13px; line-height:20px;   }
+.strong { font-weight:600; }
 em { opacity:0.7; }
  
 
@@ -21,7 +21,8 @@ em { opacity:0.7; }
 .section { position: relative}
 .sub.section { background-color:#0e141e; padding:0 160px 128px 160px; }
 .half { width:40%; display:inline-block; padding:88px 9% 88px 0; z-index:2; vertical-align: top; position: relative; }
-.half.second {padding:88px 9% 0 0;}
+.half.second {padding:88px 9% 0 0; margin-top: 85px;}
+.half.second.footer {padding:88px 9% 0 0; margin-top: 5px;}
 .half p { max-width:520px; }
 .half h2 { padding:16% 0 8% 0; }
 .half h3 { padding:16% 0 0 0; margin:30px 0 32px 0;  }
@@ -30,10 +31,13 @@ em { opacity:0.7; }
 /* Fixed layer on top of everything */
 #fxd { width:100%; height:100%; position:fixed; left: 0; top: 0; z-index: 1; }
 
-#fxd .logo, #prologue .logo { 
-  position:absolute; display:block; width:79px; height:79px; top:6%; left:100%; margin-left:-140px; background-size:57px 57px; }
-.logo h4, #prologue .logo h4 { position:relative; left:-132px; top:30px; }
-a.logo:hover { opacity:0.9; text-decoration:none;  }
+#fxd .logo, #prologue .logo {position:absolute; display:block; width:79px; height:79px; top:6%; left:100%; margin-left:-140px; background-size:57px 57px; } 
+
+.logo h4, #prologue .logo h4 /*{ position:relative; left:-132px; top:30px; }*/ { display:block; width:79px; height:42px; position:relative; left:-132px; top:5px;
+  background-size:100%; z-index:2; }
+a.logo:hover {opacity:1; text-decoration:none; }
+
+
 
 /* Share controls */
 .share a { display:inline-block; height:72px; background:url(images/share_twitter.png) no-repeat -2px 26px; background-size:20px 20px; padding-left: 22px; padding-right: 16px; opacity:0.6; line-height: 72px; }
@@ -74,7 +78,7 @@ p.credit a { color: #fff; }
 
 /* Footer */
 #footer { height:200px; min-height:200px;  background-color:#0e141e; letter-spacing:0;  }
-#footer a.logo { display:block; width:190px; height:42px; background-size:100%; }
+#footer a.logo {color: white; display:block; width:190px; height:42px; background-size:100%; }
 #footer p, #footer div.half:nth-child(1) a { color:#738f93; }
 
 /* backgrounds */
@@ -117,5 +121,5 @@ p.credit a { color: #fff; }
   .half h3 { padding:16% 0 0 0; margin:-24px 0 32px 0;  }
  
   #prologue .logo, #fxd .logo { width:40px; height:40px; top:4%; left:100%; margin-left:-60px; background-size:100%;  }  
-  #footer .second p { padding:32px 0 64px 0;  }  
+  #footer .second p { padding:32px 0 64px 0; }  
 }
