--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h3 { font-size: 24px; font-weight: normal; line-height: 35px; margin-left: -1px;
 h4 { font-size: 13px; font-weight: normal; text-transform: uppercase; line-height: 20px; letter-spacing: 5px; z-index: 1; margin-top: 60px;}
 p { font-size: 13px; line-height:20px;   }
 .strong { font-weight:600; }
+li .strong { font-weight:600; color:#FFD700;}
 em { opacity:0.7; }
  
 
@@ -20,6 +21,7 @@ em { opacity:0.7; }
 /* LAYOUT */
 .section { position: relative}
 .sub.section { background-color:#0e141e; padding:0 160px 128px 160px; }
+.sub.section p {margin-top: 10px;}
 .half { width:40%; display:inline-block; padding:88px 9% 88px 0; z-index:2; vertical-align: top; position: relative; }
 .half.second {padding:88px 9% 0 0; margin-top: 85px;}
 .half.second.footer {padding:88px 9% 0 0; margin-top: 5px;}
@@ -27,6 +29,8 @@ em { opacity:0.7; }
 .half h2 { padding:16% 0 8% 0; }
 .half h3 { padding:16% 0 0 0; margin:30px 0 32px 0;  }
 .chart {max-width: 280px};
+
+
 
 /* Fixed layer on top of everything */
 #fxd { width:100%; height:100%; position:fixed; left: 0; top: 0; z-index: 1; }
