--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Global styles */
-html, body { background:#39424e; height:100%; font:13px 'Open Sans', Arial, sans-serif; line-height:20px; color:#fff; font-weight:300; letter-spacing:0.4px; }
+html, body { background:#39424e; height:100%; font:14px 'Open Sans', Arial, sans-serif; line-height:20px; color:#fff; font-weight:300; letter-spacing:0.4px; }
 span {color: white; }
 a, a:active { text-decoration:none; color: #fff; }
 a:hover { text-decoration:underline; }
@@ -11,12 +11,16 @@ h1 { font-size: 72px; font-weight: 300; word-spacing:-12px; line-height:88px; ma
 h2 { font-size: 36px; font-weight: 600; word-spacing: -2px; line-height:52px; margin-left: -3px;}
 h3 { font-size: 24px; font-weight: normal; line-height: 35px; margin-left: -1px;  color:#fff; padding-bottom: 20px; }
 h4 { font-size: 13px; font-weight: normal; text-transform: uppercase; line-height: 20px; letter-spacing: 5px; z-index: 1; margin-top: 60px;}
-p { font-size: 13px; line-height:20px;   }
+p { font-size: 14px; line-height:20px;   }
 .strong { font-weight:600; }
 li .strong { font-weight:600; color:#FFD700;}
 em { opacity:0.7; }
  
-
+/*Customize C3 chart legend size and color*/
+.chart text {
+    fill: white;
+    font-size: 14px;
+  }
 
 /* LAYOUT */
 .section { position: relative}
@@ -28,7 +32,7 @@ em { opacity:0.7; }
 .half p { max-width:520px; }
 .half h2 { padding:16% 0 8% 0; }
 .half h3 { padding:16% 0 0 0; margin:30px 0 32px 0;  }
-.chart {max-width: 280px};
+.chart {max-width: 280px;};
 
 
 
